syntax = "proto3";

package protos;
option go_package = "github.com/seoyhaein/tori/protos";

import "google/protobuf/timestamp.proto";

//////////////////////////////////////
// 폴더 정보 저장 관련 메시지 및 서비스
//////////////////////////////////////

// 클라이언트에서 작업 실행 여부를 전달하는 메시지
message StoreFoldersInfoRequest {
  bool confirm = 1; // 작업 실행 여부 (추후 확장 가능)
}

// 폴더 정보 저장 요청에 대한 응답 메시지
message StoreFoldersInfoResponse {
  bool success = 1; // 저장 성공 여부
  string error = 2; // 에러 메시지 (문제가 있을 경우)
}

// 폴더 정보 저장 서비스를 정의
service DBApisService {
  // 클라이언트의 요청을 받아 서버 내부 폴더 정보를 DB에 저장하고 결과를 반환
  rpc StoreFoldersInfo(StoreFoldersInfoRequest) returns (StoreFoldersInfoResponse);
}

//////////////////////////////////////
// 파일 블록 데이터 관련 메시지들
//////////////////////////////////////

// 단일 파일 블럭을 나타내는 메시지
message FileBlock {
  string block_id = 1;                // 블록을 구분하기 위한 고유 ID (예: 파일 경로)
  repeated string column_headers = 2; // 컬럼 이름들
  repeated Row rows = 3;              // 행 데이터
}

// 하나의 행(row)을 나타내며, 행 번호와 헤더-값 매핑을 포함
message Row {
  int32 row_number = 1;                 // 행 번호
  map<string, string> cell_columns = 2; // 헤더 이름과 셀 값의 매핑
}

// 여러 파일 블럭을 묶어서 나타내는 메시지
message DataBlock {
  google.protobuf.Timestamp updated_at = 1;  // 최종 업데이트 시간
  repeated FileBlock blocks = 2;           // 파일 블럭 리스트
}

// 클라이언트가 현재 가지고 있는 데이터의 업데이트 타임스탬프를 포함하는 요청 메시지
message GetDataBlockRequest {
  // 클라이언트가 마지막으로 받은 데이터의 updated_at 값
  google.protobuf.Timestamp current_updated_at = 1;
}

// 서버가 응답으로 DataBlockData 를 포함하여 보내는 메시지
message GetDataBlockResponse {
  DataBlock data = 1;
  // 예를 들어, 데이터가 최신이면 no_update 플래그를 true 로 설정할 수도 있음
  bool no_update = 2;
}

// DataBlockService: 클라이언트의 요청에 대해 DataBlockData 를 반환하는 서비스
service DataBlockService {
  rpc GetDataBlock(GetDataBlockRequest) returns (GetDataBlockResponse);
}
